Added Solutions for Sudoku Solver.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,12 @@
         "xstddef": "cpp",
         "xtr1common": "cpp",
         "unordered_map": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "xhash": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stack": "cpp"
     }
 }
